# stm32playground-rs

./: Cargo.toml  clean_imports.sh
.cargo/: config.toml
notes/: crates.md  device.md  embassy.md
src/: accel.rs  main.rs  sd.rs
